# git-pointers-exercise-template

./: README.md  answers.py  exercise.md  pyproject.toml
.github/workflows/: classroom.yml
tests/: test_answers.py
